--- a/lab1-contacts.html
+++ b/lab1-contacts.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="container">
-	<div id= "header"><a href="../lab1/lab1.html"">portfolio</a></div>
+	<div id= "header"><a href="../lab1/lab1.html">portfolio</a></div>
 	<div id= "nav">
 		<ul>
 			<li><a href="../lab1/lab1-author.html">author</a></li>
@@ -45,5 +45,6 @@
 			<a href="../lab1/lab1-useful-links.html">useful links</a>
 		</div>
 	</div>
+</div>
 </body>
 </html>
